--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name":        "hosted-hubot",
+  "name":        "britta-bot",
   "version":     "2.3.2",
-  "author":      "GitHub Inc.",
+  "author":      "Jordan Hoff",
   "keywords":    "github hubot campfire bot",
   "description": "A simple helpful Robot for your Company",
   "licenses":     [{
@@ -18,7 +18,11 @@
     "hubot": "2.x.x",
     "hubot-scripts": "2.x.x",
     "optparse": "1.0.x",
-    "hubot-irc": "0.x.x"
+    "hubot-irc": "0.x.x",
+    "htmlparser": "1.7.x",
+    "soupselect": "0.2.x",
+    "jsdom": "0.2.x",
+    "underscore": "1.3.x"
   },
 
   "engines": {
