--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "htmlparser": "1.7.x",
     "soupselect": "0.2.x",
     "jsdom": "0.2.x",
-    "underscore": "1.3.x"
+    "underscore": "1.3.x",
+    "redis": "0.7.x",
+    "url": "0.7.x"
   },
 
   "engines": {
