--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jsdom": "0.2.x",
     "underscore": "1.3.x",
     "redis": "0.7.x",
-    "url": "0.7.x"
+    "url": "0.7.x",
+	"hogan.js": "2.x.x"
   },
 
   "engines": {
