--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "underscore": "1.3.x",
     "redis": "0.7.x",
     "url": "0.7.x",
-	"hogan.js": "2.x.x"
+	"hogan.js": "2.x.x",
+	"embedly" : "0.6.x"
   },
 
   "engines": {
